feat: add optional authentication middleware and new endpoint to list user's caronas
